--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <title>systemnytt.se</title>
+    <title>systemnytt.se - småpartier på systembolaget</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="systemnytt, systembolaget, öl, vin, sprit, nyheter"/>
+    <meta name="description" content="Systemnytt hjälper dig hitta småpartier och lokalproducerat som släpps på utvalda Systembolag."/>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="shortcut icon" href="./static/images/favicon.ico">
+    <!-- Google Analytics -->
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-130020407-1', 'auto');
+      ga('send', 'pageview');
+      </script>
+      <script async src='https://www.google-analytics.com/analytics.js'></script>
+      <!-- End Google Analytics -->
   </head>
   <body id="app">
     <script src="index.js"></script>
